fixed a few bugs

--- a/index.html
+++ b/index.html
@@ -20,59 +20,59 @@
          <div class="container zmanInfo">
             
             <div class="row whiteBackground">
-              <div class="col-sm-6 col-md-3 ">
+              <div class="col-sm-6 col-md-5 ">
                 AlotHaShachar
               </div>
-              <div class="col-sm-6 col-md-9 " id="alotHaShachar">
+              <div class="col-sm-6 col-md-7 " id="alotHaShachar">
               </div>
             </div>
-            <div class="row">
-              <div class="col-sm-6 col-md-3">
+            <div class="row noBackground">
+              <div class="col-sm-6 col-md-5">
                 Misheyakir
               </div>
-              <div class="col-sm-6 col-md-9 " id="misheyakir" >
+              <div class="col-sm-6 col-md-7 " id="misheyakir" >
               </div>
             </div>
             <div class="row whiteBackground">
-              <div class="col-sm-6 col-md-3">
+              <div class="col-sm-6 col-md-5">
                 Sunrise
               </div>
-              <div class="col-sm-6 col-md-9" id="sunrise" >
+              <div class="col-sm-6 col-md-7" id="sunrise" >
               </div>
             </div>
            <div class="row">
-              <div class="col-sm-6 col-md-3">
+              <div class="col-sm-6 col-md-5">
                 SofZmanShemaMGA
               </div>
-              <div class="col-sm-6 col-md-9" id="sofZmanShemaMGA">
+              <div class="col-sm-6 col-md-7" id="sofZmanShemaMGA">
               </div>
             </div>
             <div class="row whiteBackground">
-              <div class="col-sm-6 col-md-3">
+              <div class="col-sm-6 col-md-5">
                 SofZmanShema
               </div>
-              <div class="col-sm-6 col-md-9" id="sofZmanShema">
+              <div class="col-sm-6 col-md-7" id="sofZmanShema">
               </div>
             </div>
             <div class="row">
-              <div class="col-sm-6 col-md-3">
+              <div class="col-sm-6 col-md-5">
                 SofZmanTfillaMGA
               </div>
-              <div class="col-sm-6 col-md-9 " id="sofZmanTfillaMGA">
+              <div class="col-sm-6 col-md-7 " id="sofZmanTfillaMGA">
               </div>
             </div>
             <div class="row whiteBackground">
-              <div class="col-sm-6 col-md-3">
+              <div class="col-sm-6 col-md-5">
                 SofZmanTfilla
               </div>
-              <div class="col-sm-6 col-md-9" id="sofZmanTfilla">
+              <div class="col-sm-6 col-md-7" id="sofZmanTfilla">
               </div>
             </div>
             <div class="row">
-              <div class="col-sm-6 col-md-3">
+              <div class="col-sm-6 col-md-5">
                 Sunset
               </div>
-              <div class="col-sm-6 col-md-9" id="sunset">
+              <div class="col-sm-6 col-md-7" id="sunset">
               </div>
             </div>
            
