ready for deployment

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container">
         <h1 id="heading">Zmanim Checker</h1>
         <h3 id="location"></h3>
-        <input  class="zip" type="number" placeholder="zip" value="">
-        <button class="findZman btn btn-primary">Find Zmanim</button>
+        <input  class="zip" type="number" placeholder="Enter zip" value="">
+        <button class="findZman btn btn-primary">Find Zmanim 🔎</button>
         <hr>
 
          <div class="container zmanInfo">
@@ -100,7 +100,7 @@
         </div> 
 
         
-        <h1 class="footer">© Jacob Kon LLC.</h1>
+        <h1 class="footer">code by J.Kon</h1>
     </div>
 
 
@@ -111,4 +111,4 @@
 </body>
 </html>
 
-<!-- need to add fields of nightfall and a weather api  and change military time to standard time on PM times-->
+<!-- need to add a weather api-->
