testing update zmanig app

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="heading">Zmanim Checker</h1>
+        <h1 id="heading">Zmanim Checker!</h1>
         <h3 id="location"></h3>
         <input  class="zip" type="number" placeholder="Enter zip" value="">
         <button class="findZman btn btn-primary">Find Zmanim 🔎</button>
