corrected spelling tefilla

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
             </div>
             <div class="row noBackground">
               <div class="col-sm-6 col-md-5">
-                SofZmanTfilla-MGA
+                SofZmanTefilla-MGA
               </div>
               <div class="col-sm-6 col-md-7 " id="sofZmanTfillaMGA">
               </div>
             </div>
             <div class="row whiteBackground">
               <div class="col-sm-6 col-md-5">
-                SofZmanTfilla-GRA
+                SofZmanTefilla-GRA
               </div>
               <div class="col-sm-6 col-md-7" id="sofZmanTfilla">
               </div>
