gave credit to hebcal.com

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
         </div> 
 
         <h1 id="heading" class="mb-0"><span><a href="https://infobubby.com" class="btn btn-secondary" role="button">InfoBubby Home</a></span></h1>
+        <br><br>
+        <h6 class="credit">Zmanim for this site are from Hebcal.com</h6>
         
         <h1 class="footer">InfoBubby</h1>
     </div>
